--- a/sections/cstm-footer.liquid
+++ b/sections/cstm-footer.liquid
@@ -234,7 +234,7 @@
        color: white;
        flex-direction: row-reverse;
        align-items: center;
-       padding: calc(15px + 15 * ((100vw - 360px) / (1920 - 360))) 0;
+       padding-top: calc(15px + 15 * ((100vw - 360px) / (1920 - 360)));
    }
    .footer__copyright.caption {
      margin-top: 0;
