--- a/sections/recommended-products.liquid
+++ b/sections/recommended-products.liquid
@@ -59,7 +59,7 @@
                         {% if product %}
                             <div class="{% if section.blocks.size > 4 %}swiper-slide{% else %}recommended-item{% endif %}">
                                 <div class="product-card">
-                                    <a href="{{ product.url }}">
+                                    <a href="{{ product.url }}" class="product-card-link">
                                         <img src="{{ product.featured_image | image_url: width: 600 }}" class="main-image"
                                              alt="{{ product.title }}">
                                     </a>
