--- a/snippets/product-variant-custom.liquid
+++ b/snippets/product-variant-custom.liquid
@@ -279,7 +279,10 @@
     {% elsif picker_type == 'button' %}
       <fieldset class="js product-form__input product-form__input--pill">
         <legend class="form__label">
-          {{ option.name }}
+          {{ option.name }} :
+            <span data-selected-value>
+            {{- option.selected_value -}}
+          </span>
         </legend>
 
         {% for value in option.values %}
