--- a/snippets/product-variant-custom.liquid
+++ b/snippets/product-variant-custom.liquid
@@ -2,7 +2,7 @@
     .product-form__input--swatch{
         display:flex;
         flex-wrap: wrap;
-        gap:0.6reml
+        gap:0.6rem;
         margin-bottom:1.5rem;
         border:none;
         padding:0;
@@ -13,7 +13,7 @@
           margin-bottom:0.8rem;
           font-weight:500;
           font-size:1rem;
-          with:100%;
+          width:100%;
       }
 
       .product-form__input--swatch input[type="radio"]{
@@ -27,10 +27,8 @@
       .swatch{
           position:relative;
           display:inline-block;
-          height:3rem;
-          width:3rem;
-          border-radius:50%;
-          border:1px solid rgba(var(--color-foreground), 0.1);
+          height:6rem;
+          width:6rem;
           cursor:pointer;
           transition:transform 0.2s ease-in-out;
       }
@@ -80,6 +78,7 @@
           min-width: 30px;
           min-height: 30px;
       }
+
       {% comment %} .varient-plus-icon-svg {
         --swatch-input--size: 2rem;
         margin-right: 0.5rem;
@@ -121,7 +120,6 @@
     pointer-events: none;
   }
 
-  / Dropdown swatch preview /
   .dropdown-swatch {
     display: inline-flex;
     align-items: center;
@@ -136,7 +134,7 @@
     margin-right: 0.5rem;
   }
 
-  / Button/pill style variant selectors /
+
   .product-form__input--pill {
     display: flex;
     flex-wrap: wrap;
@@ -276,162 +274,6 @@
 
       </fieldset>
 
-    {% elsif picker_type == 'button' %}
-      <fieldset class="js product-form__input product-form__input--pill">
-        <legend class="form__label">
-          {{ option.name }} :
-            <span data-selected-value>
-            {{- option.selected_value -}}
-          </span>
-        </legend>
-
-        {% for value in option.values %}
-          {% liquid
-            assign swatch_focal = null
-            if value.swatch.image
-              assign image_url = value.swatch.image | image_url: width: 50
-              assign swatch_value = 'url(' | append: image_url | append: ')'
-              assign swatch_focal_point = value.swatch.image.presentation.focal_point
-            elsif value.swatch.color
-              assign swatch_value = 'rgb(' | append: value.swatch.color.rgb | append: ')'
-            else
-              assign swatch_value = null
-            endif
-
-            assign option_disabled = true
-            if value.available
-              assign option_disabled = false
-            endif
-          %}
-
-          {%- capture input_id -%}
-                        {{ section.id }}-{{ product.id }}-{{ option.position }}-{{- forloop.index0 -}}
-                    {% endcapture %}
-          {%- capture input_name -%}
-                        {{ product.id }}-{{ option.name }}-{{ option.position }}
-                    {%- endcapture -%}
-
-          {%- capture input_dataset -%}
-                        data-product-url="{{ value.product_url }}"
-                        data-option-value-id="{{ value.id }}"
-                        data-product-id="{{ product.id }}"
-                    {% endcapture %}
-
-          {% capture label_unavailable %}
-                        <span class="visually-hidden label-unavailable">
-                            {{- 'products.product.variant_sold_out_or_unavailable' | t -}}
-                        </span>
-                    {% endcapture %}
-
-          <input
-            autocomplete="off"
-            type="radio"
-            id="{{ input_id }}"
-            name="{{ input_name | escape }}"
-            value="{{ value | escape }}"
-            form="{{ product_form_id }}"
-            {% if value.selected %}
-              checked
-            {% endif %}
-            {% if option_disabled %}
-              disabled
-            {% endif %}
-            {% if option_disabled %}
-              class="disabled"
-            {% endif %}
-            {{ input_dataset }}
-          >
-          <label for="{{ input_id }}">
-            {{ value -}}
-            {% if option_disabled %}{{ label_unavailable }}{% endif %}
-          </label>
-        {% endfor %}
-      </fieldset>
-
-    {% else %}
-      <div class="product-form__input product-form__input--dropdown">
-        <label class="form__label" for="Option-{{ section.id }}-{{ product.id }}-{{ forloop.index0 }}">
-          {{ option.name }}
-        </label>
-        <div class="select">
-          {% if picker_type == 'swatch_dropdown' %}
-            <span data-selected-value class="dropdown-swatch">
-              {% render 'swatch', swatch: option.selected_value.swatch, shape: block.settings.swatch_shape %}
-            </span>
-          {% endif %}
-          <select
-            id="Option-{{ section.id }}-{{ product.id }}-{{ forloop.index0 }}"
-            class="select__select"
-            name="options[{{ option.name | escape }}]"
-            form="{{ product_form_id }}"
-            data-product-id="{{ product.id }}"
-          >
-            {% for value in option.values %}
-              {% liquid
-                assign swatch_focal = null
-                if value.swatch.image
-                  assign image_url = value.swatch.image | image_url: width: 50
-                  assign swatch_value = 'url(' | append: image_url | append: ')'
-                  assign swatch_focal_point = value.swatch.image.presentation.focal_point
-                elsif value.swatch.color
-                  assign swatch_value = 'rgb(' | append: value.swatch.color.rgb | append: ')'
-                else
-                  assign swatch_value = null
-                endif
-
-                assign option_disabled = true
-                if value.available
-                  assign option_disabled = false
-                endif
-              %}
-
-              {%- capture input_id -%}
-                                {{ section.id }}-{{ product.id }}-{{ option.position }}-{{- forloop.index0 -}}
-                            {% endcapture %}
-              {%- capture input_name -%}
-                                {{ product.id }}-{{ option.name }}-{{ option.position }}
-                            {%- endcapture -%}
-
-              {%- capture input_dataset -%}
-                                data-product-url="{{ value.product_url }}"
-                                data-option-value-id="{{ value.id }}"
-                                data-product-id="{{ product.id }}"
-                            {% endcapture %}
-
-              {% capture label_unavailable %}
-                                <span class="visually-hidden label-unavailable">
-                                    {{- 'products.product.variant_sold_out_or_unavailable' | t -}}
-                                </span>
-                            {% endcapture %}
-
-              <option
-                id="{{ input_id }}"
-                value="{{ value | escape }}"
-                {% if value.selected %}
-                  selected="selected"
-                {% endif %}
-                {% if swatch_value and swatch_focal_point %}
-                  data-swatch-focal-point="{{ swatch_focal_point }}"
-                  data-swatch-value="{{ swatch_value }}"
-                {% endif %}
-                {% if option_disabled %}
-                  disabled
-                {% endif %}
-                {{ input_dataset }}
-              >
-                {% if option_disabled %}
-                  {{- 'products.product.value_unavailable' | t: option_value: value -}}
-                {% else %}
-                  {{- value -}}
-                {% endif %}
-              </option>
-            {% endfor %}
-          </select>
-          <span class="svg-wrapper">
-            {{- 'icon-caret.svg' | inline_asset_content -}}
-          </span>
-        </div>
-      </div>
     {% endif %}
   {% endfor %}
 
