--- a/sections/recommended-products.liquid
+++ b/sections/recommended-products.liquid
@@ -53,14 +53,16 @@
         <section class="recommended-section page-width">
             <div class="{% if section.blocks.size > 4 %}swiper{% else %}recommended-grid{% endif %}">
                 <h2 class="recommended-heading">{{ section.settings.heading }}</h2>
-                <div class="{% if section.blocks.size > 4 %}swiper-wrapper{% endif %}">
+                <div class="{% if section.blocks.size > 4 %}swiper-wrapper {% else %} recommended-container {% endif
+                %}">
                     {% for block in section.blocks %}
                         {% assign product = all_products[block.settings.product] %}
                         {% if product %}
                             <div class="{% if section.blocks.size > 4 %}swiper-slide{% else %}recommended-item{% endif %}">
                                 <div class="product-card">
                                     <a href="{{ product.url }}" class="product-card-link">
-                                        <img src="{{ product.featured_image | image_url: width: 600 }}" class="main-image"
+                                        <img src="{{ product.featured_image | image_url: width: 600 }}"
+                                             class="main-image"
                                              alt="{{ product.title }}">
                                     </a>
                                     <div class="thumbnail-wrapper">
@@ -115,7 +117,6 @@
         </section>
     </div>
 </recommended-product>
-
 
 
 {% if section.blocks.size > 4 %}
