--- a/snippets/facets.liquid
+++ b/snippets/facets.liquid
@@ -516,6 +516,7 @@
                   {%- endif -%}
                 </p>
               </div>
+              <div class="close-icon">{{- 'icon-close.svg' | inline_asset_content -}}</div>
             </div>
             <div
               id="FacetsWrapperMobile"
