--- a/assets/base.css
+++ b/assets/base.css
@@ -3226,6 +3226,8 @@ details[open] > .header__submenu {
     padding: 1.2rem;
     text-decoration: none;
     color: rgba(var(--color-foreground), 0.75);
+    z-index: 10;
+    position: relative;
 }
 
 .header__menu-item:hover {
