Fixed hamburger Issue

--- a/sections/cstm-header.liquid
+++ b/sections/cstm-header.liquid
@@ -24,7 +24,6 @@
 <style>
     header-drawer {
         justify-self: start;
-        margin-left: -1.2rem;
     }
 
     {%- if section.settings.sticky_header_type == 'reduce-logo-size' -%}
@@ -55,8 +54,8 @@
 
     .list-menu--inline {
         display: inline-flex;
-        flex-wrap: wrap;
         justify-content: center;
+        gap: 10px;
     }
 
     summary.list-menu__item {
