--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -268,6 +268,12 @@
     margin: auto;
     text-align: center;
     }
+     .banner-center-image img {
+                min-height: 269px;
+            }
+             .homepage-banner {
+               min-height: 627px;
+             }
     }
 
     @media screen and (min-width: 993px) {
@@ -520,6 +526,7 @@
                                             alt="{{ block.settings.center_alt_text | default: 'center image' }}"
                                             height="100%"
                                             width="100%"
+                                            fetchpriority="high"
                                             loading="{% if section.settings.lazy_load_images == 'lazy' %}eager{% else %}lazy{% endif %}"
                                     >
                                 {% endif %}
