--- a/snippets/back-to-the-top.liquid
+++ b/snippets/back-to-the-top.liquid
@@ -34,7 +34,7 @@
 
     .back-to-top:after {
         content: "\f077";
-        font-family: FontAwesome;
+        font-family: "FontAwesome";
         font-weight: 400;
         font-style: normal;
         font-size: 1em;
