--- a/snippets/back-to-the-top.liquid
+++ b/snippets/back-to-the-top.liquid
@@ -1,21 +1,17 @@
-{% comment %}
-  Reduce below value if you need the back to the top button to appear higher up on the page.
-  That value is in pixels.
-{% endcomment %}
 {% assign vertical_offset_for_trigger = 300 %}
 
-{% comment %}
-  Vertical offset from bottom of browser for the position of the button.
-{% endcomment %}
 {% assign position_from_bottom = '6em' %}
 
-<div id="BackToTop" class="back-to-top hide"></div>
-<link
-        rel="stylesheet"
-        href="{{ 'font-awesome.min.css' | asset_url }}"
-        type="text/css"
-        media="all"
-/>
+<div id="BackToTop" class="back-to-top hide">
+    <img
+            src="{{ 'chevron-up.svg' | asset_url }}"
+            alt="Back to top"
+            width="24"
+            height="24"
+            class="back-to-top-icon"
+    />
+</div>
+
 
 <style>
     .back-to-top {
@@ -24,52 +20,45 @@
         bottom: 61px;
         right: 15px;
         z-index: 10;
-        font-size: 18px;
         background-color: #836851;
         cursor: pointer;
         border-radius: 50%;
         height: 50px;
         width: 50px;
-    }
-
-    .back-to-top:after {
-        content: "\f077";
-        font-family: "FontAwesome";
-        font-weight: 400;
-        font-style: normal;
-        font-size: 1em;
-        line-height: 50px;
-        color: #fff;
-        position: absolute;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        left: 50%;
+        padding: 13px;
+        box-sizing: border-box;
+        transition: background-color 0.3s ease;
     }
 
     .back-to-top:hover {
-        text-decoration: none;
-        color: #555;
+        background-color: #6d563f;
+    }
+
+    .back-to-top-icon {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        filter: invert(1); /* makes white icon if the SVG is black */
     }
 
     .hide {
         display: none !important;
     }
+
 </style>
 <script>
   (function() {
     function trackScroll() {
-      var scrolled = window.pageYOffset;
-      var coords = {{ vertical_offset_for_trigger }};
+      let scrolled = window.pageYOffset;
+      let coords = {{ vertical_offset_for_trigger }};
       if (scrolled > coords) {
         goTopBtn.classList.remove('hide');
-      }
-      if (scrolled < coords) {
+      } else {
         goTopBtn.classList.add('hide');
       }
     }
 
     function backToTop(event) {
-
       if (window.pageYOffset > 0) {
         window.scrollTo({
           top: 0,
@@ -79,9 +68,10 @@
       }
     }
 
-    var goTopBtn = document.querySelector('.back-to-top');
+    let goTopBtn = document.querySelector('.back-to-top');
 
     window.addEventListener('scroll', trackScroll);
     goTopBtn.addEventListener('click', backToTop);
   })();
+
 </script>
