Change media screen

--- a/assets/section-main-page.css
+++ b/assets/section-main-page.css
@@ -6,7 +6,7 @@
   margin-bottom: 3rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 768ppx) {
   .main-page-title {
     margin-bottom: 4rem;
   }
