refactor: headerDrawer open and closing arrow

--- a/snippets/cstm-header-drawer.liquid
+++ b/snippets/cstm-header-drawer.liquid
@@ -34,7 +34,10 @@
 
     .svg-wrapper {
     transition: transform 0.25s ease;
+    }
 
+    .svg_wrapper_rotate {
+    transform: rotate(180deg);
     }
 
 
