--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -164,7 +164,7 @@
                       {% if section.settings.only_desktop and section.settings.show_product_info %}
                         <div class="product-image-info" data-product-id="{{ product.id }}">
                           <div class="img-wrap">
-                            <img src="{{ product.featured_image | img_url }}" alt="img-{{ product.title }}">
+                            <img src="{{ product.featured_image | image_url: width: 200,height:200 }}" alt="img-{{ product.title }}">
                           </div>
                           <h4>{{ product.title }}</h4>
                           <div>
@@ -176,7 +176,7 @@
                      <div class="product-image-wrapper-img">
                        <img
                                class="collection-image"
-                               src="{{ product.featured_image | img_url: 'medium' }}"
+                               src="{{ product.featured_image | image_url: width: 450,height:450 }}"
                                alt="{{ product.title }}"
                                width="600"
                                height="600"
@@ -280,6 +280,10 @@
   .product-image-info h4 {
     margin: 10px 0;
     font-weight: bold;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
   }
  .product-image-wrapper-sec .product-image-info {
      position: absolute;
@@ -293,10 +297,6 @@
      padding: 10px 25px;
      text-align: center;
      z-index: 3;
-  }
-  .product-image-wrapper-sec .img-wrap {
-      max-width: 156px;
-      margin: auto;
   }
   .collection-image {
     position: relative;
